# rust-basic-crud

./: Cargo.toml  README.md
.sqlx/: query-604e7aacad8b0778c138988f93ff68a52002499af98983737429e6f2f8706e0c.json  query-6fb381ce2a676c0d1928147c166bb00d858499cb51e7a6e57b2486480b264caf.json  query-72e9b90939a5e328d7391c1294860fc044d496ba0d1435a3cc574526b525126e.json  query-cfc2969d0ec113a16902f4f7bb8731d211e921d0bf39119dab984e241e98a8ed.json
src/: main.rs
