[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = {version="0.7.2", features=["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"]}
serde = { version = "1.0.193", features = ["derive"] }
uuid = {version="*" , features = ["serde", "v4"] }
chrono = {version="0.4", features=["serde"]}
